--- a/VictimBot/VictimBot.Dialogs/Dialogs/MainChoices/MainChoicesResources.resx
+++ b/VictimBot/VictimBot.Dialogs/Dialogs/MainChoices/MainChoicesResources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Choice_ReportBurglary" xml:space="preserve">
+    <value>Report a burglary.</value>
+  </data>
+  <data name="Choice_ReviewIncidents" xml:space="preserve">
+    <value>Review incidents I've recorded here.</value>
+  </data>
+  <data name="Choice_UpdatePersonals" xml:space="preserve">
+    <value>Update my personal details.</value>
+  </data>
   <data name="ConfirmChoice" xml:space="preserve">
     <value>You chose: {0}</value>
   </data>
