minor UX and speech adjustments for clarity

--- a/VictimBot/VictimBot.Dialogs/Dialogs/BotImages.resx
+++ b/VictimBot/VictimBot.Dialogs/Dialogs/BotImages.resx
@@ -119,6 +119,6 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="bot_wave_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bot_wave_01.PNG;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\resources\bot_wave_01.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
